[package]
name = "test_lang"
version = "0.1.0"
authors = ["wander <huangjunjie27@jd.com>"]
edition = "2018"

[workspace]
members = [
  "crates/wasm-cache"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
log = "0.4.0"
env_logger = "0.8.3"
